# WeatherVane

./: README.md  app.py  pyproject.toml
static/: styles.css
templates/: astronomy.html  base.html  current.html  forecast.html  hourly_forecast.html  index.html
utils/: weather.py
