[tool.poetry]
name = "weathervane"
version = "1.0.0"
description = "A simple flask web app to get weather data"
authors = ["Liam Spatola <liam.spatola@gmail.com>"]
license = "GNU GPLv3"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.2"
requests = "^2.32.5"
tzfpy = "^1.0.0"
tzdata = "^2025.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
